--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "CI=false react-scripts build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
